--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.2"
+    "redux-saga": "^0.16.2",
+    "reduxsauce": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
